--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio sharifa</title>
-    <link rel="stylesheet" href="portfolio-stijl/style.css">
+    <link rel="stylesheet" href="portfolio-style/style.css">
     <link rel="stylesheet" href="https://use.typekit.net/byf7mku.css">
 </head>
 
